--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
   display: flex;
 }
 
+.game-header__Title {
+  font-size: 50px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 .game-board {
   display: flex;
@@ -66,5 +70,5 @@ text-decoration-color:whitesmoke ;
   flex-wrap: wrap;
   display: flex;
   background-color: blue;
-} */
-
+} 
+ */
