--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   text-decoration-color: aliceblue;
 }
 
+body {
+  background-color: dimgray;
+}
+
 .container {
   display: flex;
 }
@@ -11,6 +15,11 @@
 .game-header__Title {
   font-size: 50px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .game-board {
@@ -18,7 +27,7 @@
   flex-wrap: wrap;
   width: 300px;
   height: 600px;
-border: 2px solid whitesmoke;
+border: 6px solid whitesmoke;
   background-color: black;
 }
 
@@ -69,6 +78,6 @@ text-decoration-color:whitesmoke ;
   width: 120px;
   flex-wrap: wrap;
   display: flex;
-  background-color: blue;
+  background-color: black;
 } 
  */
