--- a/style.css
+++ b/style.css
@@ -5,21 +5,52 @@
 }
 
 body {
-  background-color: dimgray;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inconsolata', monospace;
+  background-color: #111;
 }
-
-.container {
+.homepage main {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.game-header__Title {
-  font-size: 50px;
+main {
+  min-height: 100vh;
+}
+
+
+h2,
+h3 {
+  font-family: 'Play', sans-serif;
+  color: #fff;
+}
+
+.button {
+  padding: 1rem 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 4rem;
+  
+}
+
+.game-header__Title, .title {
+  display: block;
+  position: relative;
+  letter-spacing: 10px;
+  font-size: 6rem;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #fff;
   
 }
 
 a:link {
   text-decoration: none;
+  font-size: 4rem;
 }
 
 .game-board {
@@ -81,3 +112,4 @@ text-decoration-color:whitesmoke ;
   background-color: black;
 } 
  */
+
