--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Inconsolata', monospace;
@@ -20,7 +18,7 @@ body {
 }
 
 main {
-  min-height: 100vh;
+height: 90vh;
 }
 
 
@@ -50,7 +48,7 @@ h3 {
 
 a:link {
   text-decoration: none;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .game-board {
